Get default skins to display + correct alignment

--- a/style.css
+++ b/style.css
@@ -94,7 +94,10 @@
     color: #fffcdc;
     font-weight: bold;
     text-align: center;
-    margin-top: -1.2vw;
+    position: absolute;
+    left: 0;
+    right: 0;
+    transform: translateY(-2vw);
 }
 
 body {
@@ -112,5 +115,35 @@ html, body {
     bottom: 0;
     width: 100%;
     position: absolute;
+    height: 15%;
     background-color: rgba(255, 255, 255, 0.25);
+}
+
+.imgContainer {
+    vertical-align: middle;
+    text-align: center;
+    color: white;
+    top: 1;
+    height: 85%;
+    width: 100%;
+    height: 6vw;
+    line-height: 6vw;
+}
+
+.weaponImg {
+    width: 90%;
+    margin: auto;
+    left: 0;
+    right: 0;
+    max-width: 100%;
+    max-height: 100%;
+    vertical-align: middle;
+}
+
+.imgMelee, .imgClassic, .imgFrenzy {
+    width: 60%;
+}
+
+.imgGhost, .imgSheriff {
+    width: 75%;
 }
